--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Work Study Play!",
-  "name": "WSP",
+  "name": "WSP Website Dev",
   "icons": [
     {
       "src": "wsp-logo.png",
